# detllm

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  demo.cast  detllm_demo_wrapped_v5.cast  pyproject.toml
.github/workflows/: ci.yml
detllm/: __init__.py  api.py  logging.py  version.py
detllm/backends/: base.py  hf.py  vllm.py
detllm/cli/: __init__.py  main.py
detllm/core/: artifacts.py  capabilities.py  deterministic.py  env.py  models.py
detllm/diff/: diff.py
detllm/report/: render_text.py  report.py
detllm/schemas/: __init__.py  determinism_applied.json  env_snapshot.json  report.json  run_config.json  trace_row.json
detllm/trace/: io.py
docs/: determinism_boundary.md  python_api.md  troubleshooting.md  verification.md  versioning.md  vllm.md
examples/: python_api.py  quickstart.sh
tests/: conftest.py
tests/integration/: test_hf_e2e.py
tests/unit/: test_api.py  test_capabilities.py  test_check_logic.py  test_cli.py  test_cli_diff.py  test_cli_report.py  test_deterministic.py  test_diff.py  test_env.py  test_scores_diff.py  test_vllm_backend.py
